Regression (Safari 10.1): Pressing Return in a contenteditable no longer inserts a line break under certain conditions https://bugs.webkit.org/show_bug.cgi?id=167525 <rdar://problem/30270210>

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/events/input-events-insert-newlines-after-mutation.html

Reverts an unintended change made while refactoring code for input events that caused input events to be
dispatched immediately rather than on the scoped queue. Normally, input events are dispatched in
CompositeEditCommand::apply after the end of the scope, but TypingCommands may fire input events *from within*
the scope by calling typingAddedToOpenCommand.

Instead, TypingCommands should always dispatch events
synchronously after the end of the scoped queue in CompositeEditCommand::apply, but this is a riskier change
than we should currently allow, so we should revert to our old behavior for the time being.

* editing/Editor.cpp:

LayoutTests:

Adds a new test covering newline insertion with mutation observers and an input event handler. Also rebaselines
a drag and drop test to account for dispatching input events on the scoped queue.

* fast/events/input-events-drag-and-drop-expected.txt:
* fast/events/input-events-insert-newlines-after-mutation-expected.txt: Added.
* fast/events/input-events-insert-newlines-after-mutation.html: Added.
* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/184710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211471 268f45cc-cd09-0410-ab3c-d52691b4dbfc